# Huggin-Environment-Mapping

./: README.md
.metadata/.mylyn/.taskListIndex/: segments_1
.metadata/.plugins/org.eclipse.core.resources/: .snap
.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.jdt.core/: 1014154275.index  1311875875.index  1644251385.index  214689750.index  2586947954.index  3080080688.index  844330512.index  externalLibsTimeStamps  invalidArchivesCache  nonChainingJarsCache  savedIndexNames.txt
.metadata/.plugins/org.eclipse.jdt.launching/: .install.xml  libraryInfos.xml
.metadata/.plugins/org.eclipse.jdt.ui/: QualifiedTypeNameHistory.xml  dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
C++Wrapper/: .project
C++Wrapper/src/: Main.java
CleanJNI/: CMakeLists.txt  makefile  udpReader_PointCloudStitcher.cpp  udpReader_PointCloudStitcher.h
KinetRecorder/: .project
KinetRecorder/src/: main.java
Test/: HelloWorld.cpp  HelloWorld.h  HelloWorld.java  libhelloworld.jnilib  main.java  makefile
UDPClient/: outputxy.txt
UDPClient/src/: main.java  test.java  testGenerator.java
Visualizer_Java/: .classpath  dataOutputCloud.pcd  dataOutputCloud123.pcd  output.txt  outputPoints.txt  outputabc.txt  readme.txt
Visualizer_Java/src/: MainClass.java  MainTestClass.java
threads/src/: buff.java  draad.java  main.java
(+50 files in other folders)
